--- a/LeanTest/Main.storyboard
+++ b/LeanTest/Main.storyboard
@@ -219,6 +219,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="sUL-gI-tau" kind="relationship" relationship="viewControllers" id="hom-9W-aHE"/>
+                        <segue destination="s4R-Xj-4ag" kind="relationship" relationship="viewControllers" id="mQ2-f8-wH6"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kKD-oB-OyD" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -377,7 +378,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="106" height="106"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VCx-kV-42K">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pbg.png" translatesAutoresizingMaskIntoConstraints="NO" id="VCx-kV-42K">
                                             <rect key="frame" x="0.0" y="0.0" width="106" height="106"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
@@ -545,6 +546,61 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i36-as-AMY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2564" y="879"/>
+        </scene>
+        <!--UploadVC-->
+        <scene sceneID="tKa-z1-5Qr">
+            <objects>
+                <viewController id="pUh-UI-fsO" customClass="UploadVC" customModule="LeanTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Nre-5R-D6B"/>
+                        <viewControllerLayoutGuide type="bottom" id="ijL-1T-lmU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="EOF-yZ-gC1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pbg.png" translatesAutoresizingMaskIntoConstraints="NO" id="sye-mA-HuR">
+                                <rect key="frame" x="16" y="79" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="afb-54-PiR"/>
+                                    <constraint firstAttribute="width" constant="100" id="xJd-9J-y49"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Q80-vz-ehV">
+                                <rect key="frame" x="126" y="79" width="233" height="100"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vfa-FH-ZY9">
+                                <rect key="frame" x="16" y="563" width="343" height="40"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="5gl-eF-4Rm"/>
+                                </constraints>
+                                <state key="normal" title="发 布">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="sye-mA-HuR" firstAttribute="top" secondItem="Nre-5R-D6B" secondAttribute="bottom" constant="15" id="2GH-v0-i6A"/>
+                            <constraint firstItem="vfa-FH-ZY9" firstAttribute="trailing" secondItem="EOF-yZ-gC1" secondAttribute="trailingMargin" id="9ue-38-aum"/>
+                            <constraint firstItem="sye-mA-HuR" firstAttribute="leading" secondItem="EOF-yZ-gC1" secondAttribute="leadingMargin" id="Gxz-d7-7nN"/>
+                            <constraint firstItem="Q80-vz-ehV" firstAttribute="top" secondItem="sye-mA-HuR" secondAttribute="top" id="eTW-D3-Toy"/>
+                            <constraint firstItem="ijL-1T-lmU" firstAttribute="top" secondItem="vfa-FH-ZY9" secondAttribute="bottom" constant="15" id="iQt-uo-r6P"/>
+                            <constraint firstItem="Q80-vz-ehV" firstAttribute="height" secondItem="sye-mA-HuR" secondAttribute="height" id="kW7-kA-pzN"/>
+                            <constraint firstItem="Q80-vz-ehV" firstAttribute="leading" secondItem="sye-mA-HuR" secondAttribute="trailing" constant="10" id="nM6-I8-wXs"/>
+                            <constraint firstItem="vfa-FH-ZY9" firstAttribute="leading" secondItem="EOF-yZ-gC1" secondAttribute="leadingMargin" id="okj-yL-IbW"/>
+                            <constraint firstItem="Q80-vz-ehV" firstAttribute="trailing" secondItem="EOF-yZ-gC1" secondAttribute="trailingMargin" id="xyO-QT-rwq"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="sLz-Gn-ImH"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Y3d-ed-nEn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2564" y="1566.5667166416792"/>
         </scene>
         <!--FollowersVC-->
         <scene sceneID="Huk-JA-APC">
@@ -787,7 +843,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="106" height="106"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="A05-GT-vp5">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pbg.png" translatesAutoresizingMaskIntoConstraints="NO" id="A05-GT-vp5">
                                             <rect key="frame" x="0.0" y="0.0" width="106" height="106"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
@@ -969,9 +1025,29 @@
             </objects>
             <point key="canvasLocation" x="2159" y="124"/>
         </scene>
+        <!--发布-->
+        <scene sceneID="hre-mr-cCl">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="s4R-Xj-4ag" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="发布" id="qVm-YC-EO8"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="iOW-tO-pij">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="pUh-UI-fsO" kind="relationship" relationship="rootViewController" id="daT-DN-zoF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="P1K-Qy-sBc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1753" y="1567"/>
+        </scene>
     </scenes>
     <resources>
         <image name="bg_login.png" width="1080" height="1920"/>
+        <image name="pbg.png" width="410" height="410"/>
         <image name="user.jpeg" width="300" height="300"/>
     </resources>
 </document>
